--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     left: 50%;
     transform: translateX(-50%);
     user-select: none;
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
 }
